# cdm-data-loaders

./: .dockerignore  AI_COVENANT.md  CHANGELOG.md  Dockerfile  README.md  cdm_ncbi_fto.prompt.md  docker-compose.yml  pyproject.toml
.dlt/: config.toml
.github/workflows/: docker_build.yaml  integration_tests.yaml  tests.yml  trivy.yaml
docs/: ncbi_ftp_e2e_walkthrough.md  pdb notes.md  pdb_e2e_walkthrough.md
nmdc_tables/: table_1.py  table_2.py  table_3.py
notebooks/: ncbi_ftp_manifest.ipynb  ncbi_ftp_promote.ipynb  pangenome_refseq.py  pdb_manifest.ipynb  pdb_promote.ipynb
notebooks/uniprot_prefix_investigation/: prefix_remapper_investigation.ipynb  uniprot_prefix_governance_investigation.ipynb  uniprot_prefixes.ipynb
notebooks/uniprot_prefix_investigation/data/: identifier_table_prefixes.txt  prefixes.txt  uniprot_prefix_remapping.json
scripts/: entrypoint.sh  run_tests.sh  s3_local.py
src/cdm_data_loader_utils/model/: kbase_cdm_schema.py
src/cdm_data_loader_utils/parsers/refseq/api/: annotation_report.py
src/cdm_data_loaders/audit/: checkpoint.py  metrics.py  rejects.py  run.py  schema.py
src/cdm_data_loaders/core/: constants.py  pipeline_run.py
src/cdm_data_loaders/model/: feature.py
src/cdm_data_loaders/ncbi_ftp/: assembly.py  manifest.py  metadata.py  promote.py
src/cdm_data_loaders/parsers/: bbmap_stats.py  checkm2.py  fasta.py  gene_association_file.py  genome_loader.py  genome_paths.py
src/cdm_data_loaders/parsers/refseq_importer/cli/: refseq_api_cli.py
src/cdm_data_loaders/parsers/refseq_importer/core/: cdm_builders.py  datasets_api.py  extractors.py  spark_delta.py  tables_finalize.py  taxon_processing.py
src/cdm_data_loaders/parsers/uniprot/: idmapping.py  metalink.py  relnotes.py  uniprot_kb.py  uniref.py
src/cdm_data_loaders/pdb/: __init__.py  entry.py  manifest.py  metadata.py  promote.py
src/cdm_data_loaders/pipelines/: all_the_bacteria.py  core.py  cts_defaults.py  ncbi_ftp_download.py  ncbi_rest_api.py  pdb_rsync.py  uniprot_kb.py  uniprot_kb_pipeline.py  uniref.py  uniref_pipeline.py
src/cdm_data_loaders/readers/: dsv.py
src/cdm_data_loaders/transformers/genome_depot/: schema.py
src/cdm_data_loaders/utils/: calculate_hash.py  cdm_logger.py  checksums.py  file_system.py  ftp_client.py  gz.py  helpers.py  minio.py  s3.py  spark_delta.py  xml_utils.py
src/cdm_data_loaders/utils/download/: async_client.py  core.py  sync_client.py
src/cdm_data_loaders/validation/: dataframe_validator.py  df_nullable_fields.py  validation_result.py
src/data/: README_seed_ontology.md  example_rast_annotations.csv  example_rast_annotations.json
src/utils/: README_rast_seed_mapper.md  rast_seed_mapper.py
tests/: conftest.py  s3_helpers.py  test_rast_seed_mapper.py
tests/audit/: conftest.py  test_checkpoint.py  test_metrics.py  test_rejects.py  test_run.py  test_schema.py
tests/cassettes/: test_download_atb_index_tsv.yaml  test_download_atb_index_tsv_error_404.yaml  test_download_atb_index_tsv_vcr.yaml  test_download_atv_index_tsv_error_cannot_download_tsv.yaml  test_download_atv_index_tsv_error_missing_key.yaml  test_get_annotation_report_invalid_id.yaml  test_get_annotation_report_multi_page.yaml  test_get_annotation_report_multi_page_err.yaml  test_get_annotation_report_multi_page_error.yaml  test_get_annotation_report_single_page.yaml  test_get_assembly_reports.yaml  test_get_assembly_reports_all_ids.yaml  test_get_assembly_reports_annotation_report_errors.yaml  test_get_assembly_reports_dataset_report_errors.yaml  test_get_assembly_reports_total_wipeout.yaml  test_get_dataset_reports.yaml
tests/data/atb/: all_atb_files.tsv  assembly_bakta_metadata_exact.tsv  assembly_bakta_star_metadata.tsv  bakta_exact.tsv  bakta_star.tsv  filtered_files.tsv  invalid_atb_files.tsv
tests/data/example_files/: stats.json
tests/data/ncbi_rest_api/input/: ass_ids_0001.txt  ass_ids_0002.txt  ass_ids_0003.txt
tests/data/refseq/: annotation_report.json  annotation_report.parsed.json
tests/data/results_multi/: stats.json
tests/data/results_single/: stats.json
tests/integration/: conftest.py  test_download_e2e.py  test_full_pipeline.py  test_manifest_e2e.py  test_pdb_download_e2e.py  test_pdb_manifest_e2e.py  test_pdb_promote_e2e.py  test_promote_e2e.py
tests/ncbi_ftp/: conftest.py  test_assembly.py  test_manifest.py  test_metadata.py  test_notebooks.py  test_promote.py
tests/parsers/: conftest.py  test_bbmap_stats.py  test_checkm2.py  test_gene_association_file.py  test_genome_loader.py  test_genome_paths.py
tests/parsers/refseq/api/: test_annotation_report.py
tests/parsers/refseq_importer/: test_cdm_builders.py  test_extractors.py  test_refseq_api_cli.py  test_spark_delta.py  test_tables_finalize.py
tests/parsers/uniprot/: test_idmapping.py  test_metalink.py  test_relnotes.py  test_uniprot_kb.py  test_uniref.py
tests/pdb/: __init__.py  conftest.py  test_entry.py  test_manifest.py  test_metadata.py  test_promote.py
tests/pipelines/: conftest.py  test_all_the_bacteria.py  test_core.py  test_cts_defaults.py  test_ncbi_ftp_download.py  test_ncbi_rest_api.py  test_uniprot.py  test_uniref.py
tests/readers/: test_dsv.py  test_dsv_read_with_validation.py
tests/utils/: test_cdm_logger.py  test_checksums.py  test_file_system.py  test_ftp_client.py  test_gz.py  test_s3.py  test_spark_delta.py  test_xml_utils.py
tests/utils/download/: conftest.py  test_async_client.py  test_clients.py
tests/validation/: test_dataframe_validator.py  test_df_nullable_fields.py
(+22 files in other folders)
